--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~12.1.2",
     "@ngrx/store": "^12.5.1",
     "@ngrx/store-devtools": "^12.5.1",
+    "angular-datatables": "^13.0.1",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.4",
     "tslib": "^2.2.0",
@@ -36,7 +40,9 @@
     "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
